refactor: ajustar los métodos de búsqueda en el servicio de categoria y agregar método toResponse para convertir una categoria a su DTO de respuesta, además, se agredo el directorio de 'imagen-categoria' para guardar las imágenes de la categoria.